# Artificial-Intelligence

./: .env.example  .gitignore  README.md  composer.json  pyproject.toml  requirements.txt
app/Events/: AnalyzeDocumentByAI.php  ContinueWorkflow.php
app/Http/Controllers/: OpenAIImageController.php
app/Listeners/: HandleAnalyzeDocumentByAI.php  HandleContinueWorkflow.php  ProcessDocumentByAI.php
app/Providers/: EventServiceProvider.php
autodev/: __init__.py  cli.py  orchestrator.py
autodev/agents/: __init__.py  code_generator.py  project_planner.py  prompt_interpreter.py  tech_selector.py
autodev/core/: __init__.py  config.py  llm.py  logger.py
autodev/infrastructure/: __init__.py  command_executor.py  dependency_manager.py  filesystem.py  runtime_monitor.py
autodev/quality/: __init__.py  auto_debugger.py  browser_agent.py  error_analyzer.py  optimizer.py  security_checker.py  testing_agent.py
autodev/templates/: __init__.py
config/: app.php
public/images/: images_123.jfif
resources/views/: chat.blade.php  summary.blade.php  upload.blade.php
resources/views/openai/: form.blade.php  image.blade.php
routes/: web.php
storage/app/: .gitignore
